tests-snapshots/dbc-cantools/multiplex_2.snap.stderr
error[E0412]: cannot find type `ExtendedS0Index` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:788:36
    |
788 |     pub fn s0(&mut self) -> Result<ExtendedS0Index, CanError> {
    |                                    ^^^^^^^^^^^^^^^
...
896 | pub enum ExtendedS6Index {
    | ------------------------ similarly named enum `ExtendedS6Index` defined here
    |
help: an enum with a similar name exists
    |
788 -     pub fn s0(&mut self) -> Result<ExtendedS0Index, CanError> {
788 +     pub fn s0(&mut self) -> Result<ExtendedS6Index, CanError> {
    |
help: you might be missing a type parameter
    |
666 | impl<ExtendedS0Index> Extended {
    |     +++++++++++++++++

error[E0422]: cannot find struct, variant or union type `ExtendedS0M0` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:790:41
    |
790 |             0 => Ok(ExtendedS0Index::M0(ExtendedS0M0 { raw: self.raw })),
    |                                         ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M0`
...
911 | pub struct ExtendedS6M0 {
    | ----------------------- similarly named struct `ExtendedS6M0` defined here

error[E0422]: cannot find struct, variant or union type `ExtendedS0M1` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:791:41
     |
 791 |             1 => Ok(ExtendedS0Index::M1(ExtendedS0M1 { raw: self.raw })),
     |                                         ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M1`
...
1026 | pub struct ExtendedS6M1 {
     | ----------------------- similarly named struct `ExtendedS6M1` defined here

error[E0422]: cannot find struct, variant or union type `ExtendedS0M2` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:792:41
     |
 792 |             2 => Ok(ExtendedS0Index::M2(ExtendedS0M2 { raw: self.raw })),
     |                                         ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M2`
...
1141 | pub struct ExtendedS6M2 {
     | ----------------------- similarly named struct `ExtendedS6M2` defined here

error[E0412]: cannot find type `ExtendedS0M0` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:822:37
    |
822 |     pub fn set_m0(&mut self, value: ExtendedS0M0) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M0`
...
911 | pub struct ExtendedS6M0 {
    | ----------------------- similarly named struct `ExtendedS6M0` defined here

error[E0412]: cannot find type `ExtendedS0M1` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:831:37
     |
 831 |     pub fn set_m1(&mut self, value: ExtendedS0M1) -> Result<(), CanError> {
     |                                     ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M1`
...
1026 | pub struct ExtendedS6M1 {
     | ----------------------- similarly named struct `ExtendedS6M1` defined here

error[E0412]: cannot find type `ExtendedS0M2` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:840:37
     |
 840 |     pub fn set_m2(&mut self, value: ExtendedS0M2) -> Result<(), CanError> {
     |                                     ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M2`
...
1141 | pub struct ExtendedS6M2 {
     | ----------------------- similarly named struct `ExtendedS6M2` defined here

error: invalid suffix `i32` for float literal
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:1267:30
     |
1267 |     pub const S9_MIN: i32 = -1.34_i32;
     |                              ^^^^^^^^ invalid suffix `i32`
     |
     = help: valid suffixes are `f32` and `f64`

error: invalid suffix `i32` for float literal
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:1539:21
     |
1539 |         if value < -1.34_i32 || 1235_i32 < value {
     |                     ^^^^^^^^ invalid suffix `i32`
     |
     = help: valid suffixes are `f32` and `f64`

error[E0592]: duplicate definitions with name `set_m0`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:822:5
    |
748 |     pub fn set_m0(&mut self, value: ExtendedS6M0) -> Result<(), CanError> {
    |     --------------------------------------------------------------------- other definition for `set_m0`
...
822 |     pub fn set_m0(&mut self, value: ExtendedS0M0) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m0`

error[E0592]: duplicate definitions with name `set_m1`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:831:5
    |
757 |     pub fn set_m1(&mut self, value: ExtendedS6M1) -> Result<(), CanError> {
    |     --------------------------------------------------------------------- other definition for `set_m1`
...
831 |     pub fn set_m1(&mut self, value: ExtendedS0M1) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m1`

error[E0592]: duplicate definitions with name `set_m2`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:840:5
    |
766 |     pub fn set_m2(&mut self, value: ExtendedS6M2) -> Result<(), CanError> {
    |     --------------------------------------------------------------------- other definition for `set_m2`
...
840 |     pub fn set_m2(&mut self, value: ExtendedS0M2) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m2`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:116:46
    |
116 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:412:46
    |
412 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:722:46
    |
722 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`

error[E0433]: failed to resolve: use of undeclared type `ExtendedS0Index`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:790:21
    |
790 |             0 => Ok(ExtendedS0Index::M0(ExtendedS0M0 { raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtendedS0Index`
    |                     help: an enum with a similar name exists: `ExtendedS6Index`

error[E0433]: failed to resolve: use of undeclared type `ExtendedS0Index`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:791:21
    |
791 |             1 => Ok(ExtendedS0Index::M1(ExtendedS0M1 { raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtendedS0Index`
    |                     help: an enum with a similar name exists: `ExtendedS6Index`

error[E0433]: failed to resolve: use of undeclared type `ExtendedS0Index`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:792:21
    |
792 |             2 => Ok(ExtendedS0Index::M2(ExtendedS0M2 { raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtendedS0Index`
    |                     help: an enum with a similar name exists: `ExtendedS6Index`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:796:46
    |
796 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`
